# rust-encore

./: Cargo.toml  secret.file-2  test
src/: auth.rs  enviornment.rs  functions.rs  main.rs  package.rs
src/system/: config.rs  encrypt.rs  encrypt_functions.rs  secrets.rs  system.rs
